unpackaged/main/default/objects/Product_Environment__c/Product_Environment__c.object-meta.xml
<CustomObject>
    <description>Custom object to store key information related to an Account and/or Contact&#39;s MyCase and acquirement firms product instances</description>
    <label>Product Environment</label>
    <nameField>
        <label>Product Environment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Environments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>