unpackaged/main/default/objects/Product_Environment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entity Account related to the product environment</description>
    <inlineHelpText>Entity Account related to the product environment</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Environments</relationshipLabel>
    <relationshipName>Product_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>