unpackaged/main/default/objects/Product_Environment__c/fields/Account_Matched_On__c.field-meta.xml
<CustomField>
    <fullName>Account_Matched_On__c</fullName>
    <inlineHelpText>When matched to an account of lead via Automation this field will be stamped with how the automation found the match.</inlineHelpText>
    <label>Account Matched On</label>
    <length>100</length>
    <type>Text</type>
</CustomField>