unpackaged/main/default/objects/Product_Environment__c/fields/Accounting_Free_User__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Free_User__c</fullName>
    <inlineHelpText>Product Users with Accounting Trial Status = Purchased and Accounting User License = Free User</inlineHelpText>
    <label>Accounting Free User</label>
    <summaryFilterItems>
        <field>Product_User__c.Accounting_Status__c</field>
        <operation>equals</operation>
        <value>Purchased</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Product_User__c.Accounting_User_License__c</field>
        <operation>equals</operation>
        <value>Free User</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_User__c.Product_Environment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>