unpackaged/main/default/objects/Product_Environment__c/fields/ACH_Payment_Amount_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payment_Amount_Last_30_Days__c</fullName>
    <label>ACH Payment Amount (Last 30 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>