unpackaged/main/default/objects/Product_Environment__c/fields/ACH_Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payments_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>