unpackaged/main/default/objects/Product_Environment__c/fields/ACH_Payments_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payments_Last_30_Days__c</fullName>
    <label>ACH Payments (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>