unpackaged/main/default/objects/Product_Environment__c/fields/Activated_At__c.field-meta.xml
<CustomField>
    <fullName>Activated_At__c</fullName>
    <description>Date and time the firm was activated at</description>
    <label>Activated At</label>
    <type>DateTime</type>
</CustomField>