unpackaged/main/default/objects/Product_Environment__c/fields/Active_Accounting_Free_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Accounting_Free_Users__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of free users sent from the app</description>
    <label>Active Accounting Free Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>