unpackaged/main/default/objects/Product_Environment__c/fields/Active_Lead__c.field-meta.xml
<CustomField>
    <fullName>Active_Lead__c</fullName>
    <label>Active Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>