unpackaged/main/default/objects/Product_Environment__c/fields/Admin_Portal__c.field-meta.xml
<CustomField>
    <fullName>Admin_Portal__c</fullName>
    <formula>IF(
     AND(RecordType.Name = &#39;MyCase&#39;,
     NOT(ISBLANK(Subdomain__c))),
        HYPERLINK(&quot;https://&quot;&amp; Subdomain__c &amp; &quot;.mycase.com/admin/firm&quot;, &quot;MyCase Admin Portal Link&quot;),
        
        IF(
        AND(RecordType.Name = &#39;LawPay Pro&#39;,
        NOT(ISBLANK(Subdomain__c))),
        HYPERLINK(&quot;https://&quot;&amp; Subdomain__c &amp; &quot;.mycase.com/admin/firm&quot;, &quot;LawPay Pro Admin Portal Link&quot;),
            
            IF(
            AND(RecordType.Name = &#39;Affinipay&#39;,
            NOT(ISBLANK( VTID__c ))),
            HYPERLINK(&quot;https://secure.affinipay.com/admin/merchants/&quot;&amp; VTID__c , &quot;VT Account Record Link&quot;),
                


           &quot;N/A&quot;
        )
        )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Renders a link to the MyCase Admin Portal or LawPay Pro Admin Portal based on the subdomain derived identified on the product environment record</inlineHelpText>
    <label>Admin Portal</label>
    <type>Text</type>
</CustomField>