unpackaged/main/default/objects/Product_Environment__c/fields/Alerts_CP__c.field-meta.xml
<CustomField>
    <fullName>Alerts_CP__c</fullName>
    <inlineHelpText>Indicates if Alerts are used for firm in Casepeer</inlineHelpText>
    <label>Alert</label>
    <length>10</length>
    <type>Text</type>
</CustomField>