unpackaged/main/default/objects/Product_Environment__c/fields/Attorney_Count__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Count__c</fullName>
    <inlineHelpText>The number of Product User records with the User Role of Attorney</inlineHelpText>
    <label>Attorney Count</label>
    <summaryFilterItems>
        <field>Product_User__c.User_Role__c</field>
        <operation>equals</operation>
        <value>Attorney</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_User__c.Product_Environment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>