unpackaged/main/default/objects/Product_Environment__c/fields/Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Attorneys__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active attorneys sent from the app</description>
    <label>Attorneys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>