unpackaged/main/default/objects/Product_Environment__c/fields/Bills__c.field-meta.xml
<CustomField>
    <fullName>Bills__c</fullName>
    <label>Bills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>