unpackaged/main/default/objects/Product_Environment__c/fields/Business_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_1__c</fullName>
    <label>Business Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>