unpackaged/main/default/objects/Product_Environment__c/fields/Business_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_2__c</fullName>
    <label>Business Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>