unpackaged/main/default/objects/Product_Environment__c/fields/Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Country__c</fullName>
    <label>Business Country</label>
    <length>5</length>
    <type>Text</type>
</CustomField>