unpackaged/main/default/objects/Product_Environment__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>Used in payments and can be different than Firm Name</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>