unpackaged/main/default/objects/Product_Environment__c/fields/Can_use_as_Reference__c.field-meta.xml
<CustomField>
    <fullName>Can_use_as_Reference__c</fullName>
    <description>Used to track if a Soluno account can be used for a reference.</description>
    <inlineHelpText>Indicate if this account can be used as a Reference</inlineHelpText>
    <label>Can use as Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>