unpackaged/main/default/objects/Product_Environment__c/fields/Cancellation_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested_Date__c</fullName>
    <label>Cancellation Requested Date</label>
    <type>Date</type>
</CustomField>