unpackaged/main/default/objects/Product_Environment__c/fields/Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Date__c</fullName>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>