unpackaged/main/default/objects/Product_Environment__c/fields/Churn_Details__c.field-meta.xml
<CustomField>
    <fullName>Churn_Details__c</fullName>
    <label>Churn Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>