unpackaged/main/default/objects/Product_Environment__c/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <inlineHelpText>Primary reason for the churn of the client</inlineHelpText>
    <label>Churn Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Churn_Reason</valueSetName>
    </valueSet>
</CustomField>