unpackaged/main/default/objects/Product_Environment__c/fields/Client_Invites_Accepted_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Client_Invites_Accepted_Last_30_Days__c</fullName>
    <label>Client Invites Accepted (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>