unpackaged/main/default/objects/Product_Environment__c/fields/Client_Portal_Invoices_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal_Invoices_Last_30_Days__c</fullName>
    <label>Client Portal Invoices (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>