unpackaged/main/default/objects/Product_Environment__c/fields/Companies__c.field-meta.xml
<CustomField>
    <fullName>Companies__c</fullName>
    <label>Companies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>