unpackaged/main/default/objects/Product_Environment__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Competitor that the customer has chosen instead</description>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competition</valueSetName>
    </valueSet>
</CustomField>