unpackaged/main/default/objects/Product_Environment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that initiated the creation of this Product Environment (applicable only for environments created through trials)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Environments</relationshipLabel>
    <relationshipName>Product_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>