unpackaged/main/default/objects/Product_Environment__c/fields/Contact_Counts_CP__c.field-meta.xml
<CustomField>
    <fullName>Contact_Counts_CP__c</fullName>
    <inlineHelpText>Number of contacts for firm in Casepeer</inlineHelpText>
    <label>Contact</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>