unpackaged/main/default/objects/Product_Environment__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <description>Date firm converted to by entering payment information</description>
    <label>Conversion Date</label>
    <type>Date</type>
</CustomField>