unpackaged/main/default/objects/Product_Environment__c/fields/Court_Cases__c.field-meta.xml
<CustomField>
    <fullName>Court_Cases__c</fullName>
    <label>Court Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>