unpackaged/main/default/objects/Product_Environment__c/fields/Court_Cases_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Court_Cases_Last_30_Days__c</fullName>
    <label>Court Cases (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>