unpackaged/main/default/objects/Product_Environment__c/fields/Current_Potential_Court_Cases__c.field-meta.xml
<CustomField>
    <fullName>Current_Potential_Court_Cases__c</fullName>
    <label>Current Potential Court Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>