unpackaged/main/default/objects/Product_Environment__c/fields/Custom_CSS__c.field-meta.xml
<CustomField>
    <fullName>Custom_CSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom CSS</label>
    <type>Checkbox</type>
</CustomField>