unpackaged/main/default/objects/Product_Environment__c/fields/Custom_Header__c.field-meta.xml
<CustomField>
    <fullName>Custom_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Header</label>
    <type>Checkbox</type>
</CustomField>