unpackaged/main/default/objects/Product_Environment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removed MyCase from the label and name on 12/26/22</description>
    <label>Customer</label>
    <type>Checkbox</type>
</CustomField>