unpackaged/main/default/objects/Product_Environment__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <inlineHelpText>Auto Generated Number for Soluno Customers</inlineHelpText>
    <label>Customer Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>