unpackaged/main/default/objects/Product_Environment__c/fields/Customer_Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Rep_ID__c</fullName>
    <label>Customer Sales Rep ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>