unpackaged/main/default/objects/Product_Environment__c/fields/Days_Active_Converted__c.field-meta.xml
<CustomField>
    <fullName>Days_Active_Converted__c</fullName>
    <formula>TODAY() - Conversion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Active (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>