unpackaged/main/default/objects/Product_Environment__c/fields/Days_Since_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Login__c</fullName>
    <formula>TODAY() - DATEVALUE(Last_Login_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Login</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>