unpackaged/main/default/objects/Product_Environment__c/fields/DBA_Address_1__c.field-meta.xml
<CustomField>
    <fullName>DBA_Address_1__c</fullName>
    <label>DBA Address 1</label>
    <type>TextArea</type>
</CustomField>