unpackaged/main/default/objects/Product_Environment__c/fields/DBA_Address_2__c.field-meta.xml
<CustomField>
    <fullName>DBA_Address_2__c</fullName>
    <label>DBA Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>