unpackaged/main/default/objects/Product_Environment__c/fields/DBA_City__c.field-meta.xml
<CustomField>
    <fullName>DBA_City__c</fullName>
    <label>DBA City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>