unpackaged/main/default/objects/Product_Environment__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <label>DBA_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>