unpackaged/main/default/objects/Product_Environment__c/fields/DBA_Phone__c.field-meta.xml
<CustomField>
    <fullName>DBA_Phone__c</fullName>
    <label>DBA Phone</label>
    <type>Phone</type>
</CustomField>