unpackaged/main/default/objects/Product_Environment__c/fields/DBA_State__c.field-meta.xml
<CustomField>
    <fullName>DBA_State__c</fullName>
    <label>DBA State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>