unpackaged/main/default/objects/Product_Environment__c/fields/DBA_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>DBA_Zip_Code__c</fullName>
    <label>DBA Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>