unpackaged/main/default/objects/Product_Environment__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <inlineHelpText>Describes where is the platform is deployed</inlineHelpText>
    <label>Deployment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premise</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>