unpackaged/main/default/objects/Product_Environment__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Change this field name to Brand!!!</description>
    <inlineHelpText>This reflects the brand associated to the environment</inlineHelpText>
    <label>zz Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>CasePEER</fullName>
            </value>
            <value>
                <fullName>Soluno</fullName>
            </value>
            <value>
                <fullName>Woodpecker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>