unpackaged/main/default/objects/Product_Environment__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <label>Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>