unpackaged/main/default/objects/Product_Environment__c/fields/Expenses_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Last_30_Days__c</fullName>
    <label>Expenses (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>