unpackaged/main/default/objects/Product_Environment__c/fields/Fake_Firm__c.field-meta.xml
<CustomField>
    <fullName>Fake_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked true by integration if firm is created by internal user</description>
    <label>Fake Firm</label>
    <type>Checkbox</type>
</CustomField>