unpackaged/main/default/objects/Product_Environment__c/fields/Firm_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Firm_Activation_Date__c</fullName>
    <inlineHelpText>Date firm was activated in the product platform</inlineHelpText>
    <label>Firm Activation Date</label>
    <type>DateTime</type>
</CustomField>