unpackaged/main/default/objects/Product_Environment__c/fields/Firm_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Firm_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Canceled</label>
    <type>Checkbox</type>
</CustomField>