unpackaged/main/default/objects/Product_Environment__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <externalId>true</externalId>
    <label>Firm ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>