unpackaged/main/default/objects/Product_Environment__c/fields/Firm_ID_All_Brands__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID_All_Brands__c</fullName>
    <formula>CASE( RecordType.DeveloperName, 
&quot;MyCase&quot;,Firm_ID__c  , 
&quot;LawPay Pro&quot;, Firm_ID__c  ,
&quot;Affinipay&quot;, VTID__c  , 
&quot;Docketwise&quot;, Firm_ID_DW__c  , 
 
&quot;BrandID Not Tracked&quot;
)</formula>
    <inlineHelpText>Consolidation for the diffrent firm IDs  into a single field for reporting.</inlineHelpText>
    <label>Firm ID (All Brands)</label>
    <type>Text</type>
</CustomField>