unpackaged/main/default/objects/Product_Environment__c/fields/Firm_ID_CP__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID_CP__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Casepeer Internal Customer ID</inlineHelpText>
    <label>Firm ID (CP)</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>