unpackaged/main/default/objects/Product_Environment__c/fields/Firm_ID_DW__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID_DW__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Firm ID for Docketwise</inlineHelpText>
    <label>Firm ID (DW)</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>