unpackaged/main/default/objects/Product_Environment__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <description>Name of firm that can be updated from the product environment</description>
    <label>Firm Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>