unpackaged/main/default/objects/Product_Environment__c/fields/Firm_Overdue_on_Payments__c.field-meta.xml
<CustomField>
    <fullName>Firm_Overdue_on_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Overdue on Payments</label>
    <type>Checkbox</type>
</CustomField>