unpackaged/main/default/objects/Product_Environment__c/fields/Firm_Status__c.field-meta.xml
<CustomField>
    <fullName>Firm_Status__c</fullName>
    <formula>Case(Brand__c ,
&quot;MyCase&quot;,  IF(Churn_Date__c &lt;=Today(), &quot;Churned&quot;,
           IF( NOT( ISBLANK( Conversion_Date__c)), IF( ISBLANK(First_Purchase_Date__c), &quot;Converted&quot;, &quot;Customer&quot;),
           IF(Trial_Expiration__c &gt;= TODAY(), &quot;In Trial&quot;, &quot;Expired Trial&quot;))),
&quot;Docketwise&quot;, Case ( Status__c, 
              &quot;&quot; ,&quot;Pending Trial&quot; ,
              &quot;trialing&quot; , &quot;In Trial&quot; ,
              &quot;unpaid&quot; , &quot;Expired Trial&quot; ,
              &quot;active&quot; , &quot;Customer&quot; ,
              &quot;past due&quot; , &quot;Customer&quot; ,
              &quot;canceled&quot; , &quot;Churned&quot; ,
              &quot;Unknown DW Status&quot; ),

&quot;Not Available&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Status</label>
    <type>Text</type>
</CustomField>