unpackaged/main/default/objects/Product_Environment__c/fields/Firm_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Firm_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Suspended</label>
    <type>Checkbox</type>
</CustomField>