unpackaged/main/default/objects/Product_Environment__c/fields/Firm_URL__c.field-meta.xml
<CustomField>
    <fullName>Firm_URL__c</fullName>
    <label>Firm URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>