unpackaged/main/default/objects/Product_Environment__c/fields/Firm_UUID__c.field-meta.xml
<CustomField>
    <fullName>Firm_UUID__c</fullName>
    <description>Unique external ID for the product environment firm</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique external ID for the product environment firm</inlineHelpText>
    <label>Firm UUID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>