unpackaged/main/default/objects/Product_Environment__c/fields/Firm_UUID_All_Brands__c.field-meta.xml
<CustomField>
    <fullName>Firm_UUID_All_Brands__c</fullName>
    <formula>CASE( RecordType.DeveloperName, 
&quot;MyCase&quot;, Firm_UUID__c   , 
&quot;LawPay Pro&quot;, Firm_UUID__c  ,
 
&quot;Brand UUID Not Tracked&quot;
)</formula>
    <inlineHelpText>Consolidated Brand UUID</inlineHelpText>
    <label>Firm UUID (All Brands)</label>
    <type>Text</type>
</CustomField>