unpackaged/main/default/objects/Product_Environment__c/fields/Firm_UUID_CP__c.field-meta.xml
<CustomField>
    <fullName>Firm_UUID_CP__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Casepeer Customer UUID</inlineHelpText>
    <label>Firm UUID (CP)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>