unpackaged/main/default/objects/Product_Environment__c/fields/Firm_UUID_DW__c.field-meta.xml
<CustomField>
    <fullName>Firm_UUID_DW__c</fullName>
    <externalId>true</externalId>
    <label>Firm UUID (DW)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>