unpackaged/main/default/objects/Product_Environment__c/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>