unpackaged/main/default/objects/Product_Environment__c/fields/Free_License_Count__c.field-meta.xml
<CustomField>
    <fullName>Free_License_Count__c</fullName>
    <label>Free License Count</label>
    <summaryFilterItems>
        <field>Product_User__c.User_License__c</field>
        <operation>equals</operation>
        <value>Free User</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_User__c.Product_Environment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>