unpackaged/main/default/objects/Product_Environment__c/fields/Free_Users_Total__c.field-meta.xml
<CustomField>
    <fullName>Free_Users_Total__c</fullName>
    <description>Userd for Soluno, they need to add free users counts for historical tracking</description>
    <label>Free Users Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>