unpackaged/main/default/objects/Product_Environment__c/fields/Google_Syncs__c.field-meta.xml
<CustomField>
    <fullName>Google_Syncs__c</fullName>
    <label>Google Syncs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>