unpackaged/main/default/objects/Product_Environment__c/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <inlineHelpText>Health score provided by the Product for this environment</inlineHelpText>
    <label>Health Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>