unpackaged/main/default/objects/Product_Environment__c/fields/In_Trial__c.field-meta.xml
<CustomField>
    <fullName>In_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Trial</label>
    <type>Checkbox</type>
</CustomField>