unpackaged/main/default/objects/Product_Environment__c/fields/Initiated_From__c.field-meta.xml
<CustomField>
    <fullName>Initiated_From__c</fullName>
    <description>Specifies whether firm product instance was initiated from a trial or direct purchase</description>
    <inlineHelpText>Specifies whether firm product instance was initiated from a trial or direct purchase</inlineHelpText>
    <label>Initiated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Purchase</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>