unpackaged/main/default/objects/Product_Environment__c/fields/Last_12_Month_Volume__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Month_Volume__c</fullName>
    <label>Last 12 Month Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>