unpackaged/main/default/objects/Product_Environment__c/fields/Last_Court_Case__c.field-meta.xml
<CustomField>
    <fullName>Last_Court_Case__c</fullName>
    <label>Last Court Case</label>
    <type>Date</type>
</CustomField>