unpackaged/main/default/objects/Product_Environment__c/fields/Last_Login_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date_Time__c</fullName>
    <inlineHelpText>Last user login time</inlineHelpText>
    <label>Last Login Date/Time</label>
    <type>DateTime</type>
</CustomField>