unpackaged/main/default/objects/Product_Environment__c/fields/LawPay_Pro_Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Pro_Product_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Linked LPP PE Record</inlineHelpText>
    <label>LawPay Pro Product Environment</label>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipLabel>Product Environments</relationshipLabel>
    <relationshipName>Product_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>